--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "@types/aws-lambda": "^8.10.131",
     "aws-cdk-lib": "2.118.0",
+    "aws-sdk": "^2.1531.0",
     "constructs": "^10.0.0",
     "source-map-support": "^0.5.21"
   }
