--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "devDependencies": {
     "@types/jest": "^29.5.11",
     "@types/node": "20.10.4",
+    "@types/nodemailer": "^6.4.14",
     "aws-cdk": "2.118.0",
     "esbuild": "^0.19.11",
     "jest": "^29.7.0",
@@ -21,10 +22,12 @@
     "typescript": "~5.3.3"
   },
   "dependencies": {
+    "@aws-sdk/client-sesv2": "^3.529.1",
     "@types/aws-lambda": "^8.10.131",
     "aws-cdk-lib": "2.118.0",
-    "aws-sdk": "^2.1531.0",
+    "aws-sdk": "^2.1574.0",
     "constructs": "^10.0.0",
+    "nodemailer": "^6.9.12",
     "source-map-support": "^0.5.21"
   }
 }
